syntax = "proto3";

option csharp_namespace = "Promotion.GRPC.Protos";
import "google/protobuf/timestamp.proto";

service DiscountProtoService {

	rpc GetPromotion (GetPromotionRequest) returns (PromotionModel);
	rpc GetPromotions (GetPromotionsFilterRequest) returns (PromotionModels);
	rpc CreatePromotion (CreatePromotionRequest) returns (PromotionModel);
	rpc UpdatePromotion (UpdatePromotionRequest) returns (PromotionModel);
	rpc DeletePromotion (DeletePromotionRequest) returns (DeletePromotionResponse);	  
}

message GetPromotionRequest {
	string id = 1;
}

message PromotionModel {
	int32 id = 1;
	string Name = 2;
	string Description = 3;
	google.protobuf.Timestamp From = 4;
	int32 Percentage = 5;
	int32 Duration = 6;
	bool IsActive = 7;
	repeated ItemModel Items = 8;
}

message ItemModel {
	int32 Id = 1;
    int32 ProductId = 2;
    string ProductName = 3;
    double Price = 4;
	string ProductImage = 5;
}

message GetPromotionsFilterRequest {
	bool IsActive = 1;
}

message PromotionModels {
	repeated PromotionModel Promotions = 1;
}

message CreatePromotionRequest {
	PromotionModel promo = 1;
}

message UpdatePromotionRequest { 
	PromotionModel promo = 1;
}

message DeletePromotionRequest {
	int32 Id = 1;
}

message DeletePromotionResponse {
	bool success = 1;
}